--- a/npcs/foreatha_leaffoot.yaml
+++ b/npcs/foreatha_leaffoot.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: young adult
+    age: Young Adult
 
     #
     # Races (case insensitive):
@@ -467,67 +467,107 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Wisdom
+    - Intelligence
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - Sleep Magic
+    resistances:
+    - Charm
     skills:
-    - Elf Abilities:
-      - Fey Ancestry: Advantage on saving throws againts charm and immune to sleep magic
-        Darkvision: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
-        Keen Senses: You have proficiency in the Perception skill
-        Trance: Elves don’t need to sleep. Instead, they meditate deeply, remaining semiconscious, for 4 hours a day. (The Common word for such meditation is “trance.”) While meditating, you can dream after a fashion; such
-                dreams are actually mental exercises that have become reflexive through years of practice. After Resting in this way, you gain the same benefit that a human does from 8 hours of sleep
-      Wood Elf Abilities:
-      - Elf Weapon Training: You have proficiency with the longsword, shortsword, shortbow, and longbow
-        Fleet of Foot: Your base walking speed increases to 35 feet
-        Mask of the Wild: Can attempt to hide even when only lightly obscured by natural phenomenon 
-        Wood Elf Magic: Once per long rest can cast Guidance, Longstrider and Pass Without Trace without expending a spell slot. Spell DC
-      Druid Abilities:
-      - Druidic: You know Druidic, the Secret language of druids. You can speak the language and use it to leave hidden messages. You and others who know this language automatically spot such a Message. Others spot the
-                 message's presence with a successful DC 15 Wisdom (Perception) check but can't decipher it without magic.  
-        Spellcasting:
-        - Description: DC 15
-          Cantrips: Druidcraft, Mending, Produce Flame
-          1st Level: Cure Wounds, Goodberry, Purify Food and Water, Entangle
-          2nd Level: Lesser Restoration, Protection from Poison, Locates Animals or Plants
-          3rd Level: Plant Growth, Speak with Plants, Call Lightning
-          4th Level: Control Water, Confusion
-        Wild Shape: you can use your action to magically assume the shape of a beast that you have seen before. You can use this feature twice. You regain expended uses when you finish a short or Long Rest. Your druid level
-                    determines the Beasts you can transform into, as shown in the Beast Shapes table. At 2nd Level, for example, you can transform into any beast that has a Challenge Rating of 1/4 or lower that doesn't have a
-                    flying or Swimming speed. You can stay in a beast shape for a number of hours equal to half your druid level (rounded down). You then revert to your normal form unless you expend another use of this feature.
-                    You can revert to your normal form earlier by using a Bonus Action on Your Turn. You automatically revert if you fall Unconscious, drop to 0 Hit Points, or die
-      Circle of Stars Abilities:
-      - Star Map:
-        - Description: You've created a star chart as part of your heavenly studies. It is a Tiny object and can serve as a spellcasting focus for your druid spells. You determine its form by rolling on the Star Map table or by
-                       choosing one. While holding this map, you have these benefits - 
-          Additional Information:
-          - You know the Guidance cantrip.
-          - You have the Guiding Bolt spell prepared. It counts as a druid spell for you, and it doesn't count against the number of spells you can have prepared.
-          - You can cast Guiding Bolt without expending a spell slot. You can do so a number of times equal to your proficiency bonus, and you regain all expended uses when you finish a long rest.
-          - If you lose the map, you can perform a 1-hour ceremony to magically create a replacement. This ceremony can be performed during a short or long rest, and it destroys the previous map.
-          Starry Form: you gain the ability to harness constellations’ power to alter your form. As a bonus action, you can expend a use of your Wild Shape feature to take on a starry form, rather than transforming into a beast. 
-                       While in your starry form, you retain your game statistics, but your body becomes luminous; your joints glimmer like stars, and glowing lines connect them as on a star chart. This form sheds bright light
-                       in a 10-foot radius and dim light for an additional 10 feet. The form lasts for 10 minutes. It ends early if you dismiss it (no action required), are incapacitated, die, or use this feature again. 
-                       Whenever you assume your starry form, choose which of the following constellations glimmers on your body; your choice gives you certain benefits while in the form - 
-          Archer: A constellation of an archer appears on you. When you activate this form, and as a bonus action on your subsequent turns while it lasts, you can make a ranged spell attack, hurling a luminous 
-                  arrow that targets one creature within 60 feet of you. On a hit, the attack deals radiant damage equal to 1d8 + your Wisdom modifier.
-          Chalice: A constellation of a life-giving goblet appears on you. Whenever you cast a spell using a spell slot that restores hit points to a creature, you or another creature within 30 feet of you can 
-                   regain hit points equal to 1d8 + your Wisdom modifier.
-          Dragon: A constellation of a wise dragon appears on you. When you make an Intelligence or a Wisdom check or a Constitution saving throw to maintain concentration on a spell, you can treat a roll of 9 
-                  or lower on the d20 as a 10 
-          Cosmic Omen:
-          - Description: you learn to use your star map to divine the will of the cosmos. Whenever you finish a long rest, you can consult your Star Map for omens. When you do so, roll a die. Until you finish your next long rest,
-                         you gain access to a special reaction based on whether you rolled an even or an odd number on the die -
-            Weal (even): Whenever a creature you can see within 30 feet of you is about to make an attack roll, a saving throw, or an ability check, you can use your reaction to roll a d6 and add the number rolled to
-                         the total.
-            Woe (odd): Whenever a creature you can see within 30 feet of you is about to make an attack roll, a saving throw, or an ability check, you can use your reaction to roll a d6 and subtract the number
-                       rolled from the total
+    - Herbalism
+    proficiencies:
+    - Arcana
+    - Investigation
+    - History    
+    - Nature
+    - Herbalism Kit
+    - Medicine
+  special-abilities:
+  - title: Elf Abilities
+  - abilities: 
+    - title: Fey Ancestry
+    - content: Advantage on saving throws againts charm and immune to sleep magic
+    - title: Darkvision
+    - content: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
+    - title: Keen Senses
+    - content: You have proficiency in the Perception skill 
+    - title: Trance
+    - content: Elves don’t need to sleep. Instead, they meditate deeply, remaining semiconscious, for 4 hours a day. (The Common word for such meditation is “trance.”) While meditating, you can dream after a fashion; such
+               dreams are actually mental exercises that have become reflexive through years of practice. After Resting in this way, you gain the same benefit that a human does from 8 hours of sleep
+  - title: Wood Elf Abilities
+  - abilities:
+    - title: Elf Weapon Training
+    - content: You have proficiency with the longsword, shortsword, shortbow, and longbow
+    - title: Fleet of Foot
+    - content: Your base walking speed increases to 35 feet
+    - title: Mask of the Wild
+    - content: Can attempt to hide even when only lightly obscured by natural phenomenon 
+    - title: Wood Elf Magic
+    - content: Once per long rest can cast Guidance, Longstrider and Pass Without Trace without expending a spell slot. Spell DC
+  - title: Druid Abilities
+  - abilities:
+  - title: Druid Spellcasting
+  - abilities: 
+    - title: Spell DC
+    - content: 15
+    - title: Cantrips
+    - content:  Druidcraft, Mending, Produce Flame
+    - title: 1st Level
+    - content: Cure Wounds, Goodberry, Purify Food and Water, Entangle
+    - title: 2nd Level
+    - content: Lesser Restoration, Protection from Poison, Locates Animals or Plants
+    - title: 3rd Level
+    - content: Plant Growth, Speak with Plants, Call Lightning
+    - title: 4th Level
+    - content: Control Water, Confusion
+    - title: Druidic
+    - content: You know Druidic, the Secret language of druids. You can speak the language and use it to leave hidden messages. You and others who know this language automatically spot such a Message. Others spot the 
+               message's presence with a successful DC 15 Wisdom (Perception) check but can't decipher it without magic.
+    - title: Wild Shape
+    - content: You can use your action to magically assume the shape of a beast that you have seen before. You can use this feature twice. You regain expended uses when you finish a short or Long Rest. Your druid level 
+               determines the Beasts you can transform into, as shown in the Beast Shapes table. At 2nd Level, for example, you can transform into any beast that has a Challenge Rating of 1/4 or lower that doesn't have a 
+               flying or Swimming speed. You can stay in a beast shape for a number of hours equal to half your druid level (rounded down). You then revert to your normal form unless you expend another use of this feature. 
+               You can revert to your normal form earlier by using a Bonus Action on Your Turn. You automatically revert if you fall Unconscious, drop to 0 Hit Points, or die
+  - title: Circle of Stars Abilities
+  - abilities: 
+    - title: Star Map
+    - content: You've created a star chart as part of your heavenly studies. It is a Tiny object and can serve as a spellcasting focus for your druid spells. You determine its form by rolling on the Star Map table or by
+               choosing one. While holding this map, you have these benefits - 
+               You know the Guidance cantrip.
+               You have the Guiding Bolt spell prepared. It counts as a druid spell for you, and it doesn't count against the number of spells you can have prepared.
+               You can cast Guiding Bolt without expending a spell slot. You can do so a number of times equal to your proficiency bonus, and you regain all expended uses when you finish a long rest.
+               If you lose the map, you can perform a 1-hour ceremony to magically create a replacement. This ceremony can be performed during a short or long rest, and it destroys the previous map.
+    - title: Starry Form
+    - content: You gain the ability to harness constellations’ power to alter your form. As a bonus action, you can expend a use of your Wild Shape feature to take on a starry form, rather than transforming into a beast. 
+               While in your starry form, you retain your game statistics, but your body becomes luminous; your joints glimmer like stars, and glowing lines connect them as on a star chart. This form sheds bright light
+               in a 10-foot radius and dim light for an additional 10 feet. The form lasts for 10 minutes. It ends early if you dismiss it (no action required), are incapacitated, die, or use this feature again. 
+               Whenever you assume your starry form, choose which of the following constellations glimmers on your body; your choice gives you certain benefits while in the form - 
+               Archer-  A constellation of an archer appears on you. When you activate this form, and as a bonus action on your subsequent turns while it lasts, you can make a ranged spell attack, hurling a luminous 
+                        arrow that targets one creature within 60 feet of you. On a hit, the attack deals radiant damage equal to 1d8 + your Wisdom modifier.
+               Chalice - A constellation of a life-giving goblet appears on you. Whenever you cast a spell using a spell slot that restores hit points to a creature, you or another creature within 30 feet of you can 
+                         regain hit points equal to 1d8 + your Wisdom modifier.
+               Dragon - A constellation of a wise dragon appears on you. When you make an Intelligence or a Wisdom check or a Constitution saving throw to maintain concentration on a spell, you can treat a roll of 9 
+                        or lower on the d20 as a 10 
+    - title: Cosmic Omen
+    - content: You learn to use your star map to divine the will of the cosmos. Whenever you finish a long rest, you can consult your Star Map for omens. When you do so, roll a die. Until you finish your next long rest,
+               you gain access to a special reaction based on whether you rolled an even or an odd number on the die - 
+               Weal (even) - Whenever a creature you can see within 30 feet of you is about to make an attack roll, a saving throw, or an ability check, you can use your reaction to roll a d6 and add the number
+                             rolled to the total.
+               Woe (odd) - Whenever a creature you can see within 30 feet of you is about to make an attack roll, a saving throw, or an ability check, you can use your reaction to roll a d6 and subtract the number
+                           rolled from the total 
+  
+  - title: Attacks
+  - content: 1 spell or WildShape attack
+  - title: Combat Tactics
+  - content: Will try not to fight
 
-    special-abilities:
-    - Proficiencies: Investigation, Arcana, History   
-    attacks: |
-      1 spell or WildShape attack
-    combat-tactics: |
-      Will try not to fight
-    special-equipment:
-    - Potions For Sale: Animal Friendship, Healing, Resistance, Speed, Water Breathing
+  - title: Special Equipment
+  - abilities:
+    - title: Potions For Sale
+    - content: Various Potions of Animal Friendship, Healing, Resistance, Speed, Water Breathing
                                                                    
   profile:
 
@@ -553,5 +593,5 @@ npc:
     # No length limit for now.
     #
     personality: |
-      Beautiful, long blonde hair and long flowing earth-toned robes. A shimmering glint of stars in her piercing emerald eyes. She is sweet andcompetent and genuinely cares about nature and her customers
+      Beautiful, long blonde hair and long flowing earth-toned robes. A shimmering glint of stars in her piercing emerald eyes. She is sweet and competent and genuinely cares about nature and her customers
   
